--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "webpack-cdn-local-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "一个webpack插件，将外部cdn下载到本地。",
   "author": "cjb263",
   "main": "index.js",
   "scripts": {
     "start": "webpack --config example/webpack.config.js"
   },
-  "keywords": ["webpack", "plugin", "plugins", "cdn", "local"],
+  "keywords": [
+    "webpack",
+    "plugin",
+    "plugins",
+    "cdn",
+    "local"
+  ],
   "license": "MIT",
   "devDependencies": {
+    "axios": "^0.27.2",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-sources": "^3.2.3"
   },
   "repository": {
     "type": "git",
